# IOT_Gateway_for_training

./: CMakeLists.txt  Main.qml  README.md  main.cpp  modbuscontroller.cpp  modbuscontroller.h
modules/appservice/: AppService.cpp  AppService.h  CMakeLists.txt
modules/messagequeue/: CMakeLists.txt  MessageQueue.cpp  MessageQueue.h
modules/modbuscontroller/: CMakeLists.txt  ModbusController.cpp  ModbusController.h
modules/mqttworker/: CMakeLists.txt  MqttWorker.cpp  MqttWorker.h
modules/types/: CMakeLists.txt  ModbusTypes.h
